--- a/src/Components/LpAnalyticalSection/analyticalstyle.css
+++ b/src/Components/LpAnalyticalSection/analyticalstyle.css
@@ -1,61 +1,3 @@
-.main {
-  position: relative;
-  padding-bottom: 6rem;
-  z-index: 0;
-  background-image: url("../../Assets/Rectangle 35.png");
-  background-size: cover;
-  background-position: center;
-  height: 110vh; /* Keep a fixed height for the viewport */
-  width: 100%;
-  overflow: hidden; /* Hide overflow */
-}
-
-.main::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(
-    circle at center,
-    rgba(0, 0, 0, 0) 0%,
-    /* Transparent in the center */ rgba(0, 0, 0, 20) 100%
-      /* Black at the edges */
-  );
- 
-
-  backdrop-filter: blur(0.005px);
-
-  z-index: 1;
-}
-
-.left-div,
-.right-div {
-  position: absolute; /* Position relative to the main div */
-  top: 20px; /* Position from the top */
-  width: 40%; /* Width of each div */
-  height: auto;
-
-  z-index: 1;
-  padding: 1rem;
-  color: white;
-  text-align: center;
-  transition: transform 0.3s ease-out; /* Smooth transition */
-}
-
-.left-div {
-  left: 0; /* Position to the left */
-  transform: translateX(-100%); /* Start completely off-screen */
-}
-
-.right-div {
-  right: 0; /* Position to the right */
-  transform: translateX(100%); /* Start completely off-screen */
-}
-
-.content {
-  height: 200vh; /* Enough height to make the main div scrollable */
-  position: relative;
-  z-index: 2; 
+.background{
+  background-image: url("../../assets/Rectangle\ 35.png");
 }
