--- a/src/Components/LpAnalyticalSection/analyticalstyle.css
+++ b/src/Components/LpAnalyticalSection/analyticalstyle.css
@@ -1,3 +1,10 @@
 .background{
   background-image: url("../../assets/Rectangle\ 35.png");
 }
+
+/* Ensure the tags have fixed height and responsive width */
+.anaspan {
+  height: 50px; /* Fixed height */
+  min-width: 355px; /* Minimum width for small screens */
+  max-width: 500px; /* Maximum width for larger screens */
+}
